# fibonacci

./: README.md  fibonacci_test.py  finonacci_test.py  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
fibonacci.egg-info/: PKG-INFO
fibonacci_uos_chris.egg-info/: PKG-INFO  SOURCES.txt
my_package/: fibonacci.py
