[build-systems]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "fibonacci_friday_afternoon"
description = "a description"
dependencies = ["pandas", "numpy"]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
